// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppBody /> matches snapshot 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={1}
  sx={
    Object {
      "@media print": Object {
        "display": "block",
        "marginTop": 0,
      },
      "marginTop": "75px",
    }
  }
>
  <NewNote
    newNote={false}
    onNewNoteCancel={[Function]}
    search=""
  />
  <Routes>
    <Route
      element={
        <NoteList
          createFromSearch={[Function]}
          depth={1}
          notes={Object {}}
          parent_note_id={null}
          search=""
        />
      }
      path="/"
    />
    <Route
      element={
        <NoteList
          createFromSearch={[Function]}
          depth={1}
          notes={Object {}}
          parent_note_id={null}
          search=""
        />
      }
      path="/archive"
    />
    <Route
      element={
        <FilteredNoteList
          depth={1}
          search=""
        />
      }
      path="/note/:ids"
    />
    <Route
      element={
        <FilteredNoteList
          depth={1}
          search=""
        />
      }
      path="/disambiguation/:ids"
    />
  </Routes>
</ForwardRef(Grid)>
`;

exports[`<AppBody /> matches snapshot 2`] = `
<NewNote
  newNote={false}
  onNewNoteCancel={[Function]}
  search=""
/>
`;

exports[`<AppBody /> matches snapshot 3`] = `
<ForwardRef(Grid)
  container={true}
  spacing={1}
  sx={
    Object {
      "@media print": Object {
        "display": "block",
        "marginTop": 0,
      },
      "marginTop": "75px",
    }
  }
>
  <NewNote
    newNote={true}
    onNewNoteCancel={[Function]}
    search="Search Term"
  />
  <Routes>
    <Route
      element={
        <NoteList
          createFromSearch={[Function]}
          depth={1}
          notes={Object {}}
          parent_note_id={null}
          search="Search Term"
        />
      }
      path="/"
    />
    <Route
      element={
        <NoteList
          createFromSearch={[Function]}
          depth={1}
          notes={Object {}}
          parent_note_id={null}
          search="Search Term"
        />
      }
      path="/archive"
    />
    <Route
      element={
        <FilteredNoteList
          depth={1}
          search="Search Term"
        />
      }
      path="/note/:ids"
    />
    <Route
      element={
        <FilteredNoteList
          depth={1}
          search="Search Term"
        />
      }
      path="/disambiguation/:ids"
    />
  </Routes>
</ForwardRef(Grid)>
`;

exports[`<AppBody /> matches snapshot 4`] = `
<NewNote
  newNote={true}
  onNewNoteCancel={[Function]}
  search="Search Term"
/>
`;

exports[`<NewNote /> matches snapshot 1`] = `""`;

exports[`<NewNote /> matches snapshot 2`] = `
<ForwardRef(Grid)
  item={true}
  xs={12}
>
  <Note
    depth={1}
    note={
      Object {
        "body": "",
        "title": "Search Term",
      }
    }
    onNewNoteCancel={[Function]}
    search="Search Term"
  />
</ForwardRef(Grid)>
`;
